--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-drag-resize",
+  "name": "@im/react-native-drag-resize",
   "version": "1.0.2",
   "description": "React Native component for draggable and resizable manipulation.",
   "main": "index.js",
